<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AX Incident</string>
    <string name="menu_insert">Add feed</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_send">Send</string>
    <string name="menu_open">Open</string>
    <string name="menu_move">Move</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Revert</string>
    <string name="select_log_status">Select Log Status</string>
    <string name="select_log_priority">Select Log Priority</string>
    <string name="select_log_type">Select Log Type</string>
    <string name="select_intel_type">Select Intel Type</string>
    <string name="select_intel_status">Select Intel Status</string>
    <string name="select_triage_status">Select Casualty Status</string>
    <string name="select_triage_color">Select Casualty Color</string>
    <string name="select_gender">Select Gender</string>
    <string name="no_data">NO DATA TO DISPLAY</string>
    <string name="asset_search_label">asset_search_label</string>
    <string name="asset_search_hint">asset_search_hint</string>
    <string name="asset_search_description">Asset</string>
    <string name="asset_type">Asset Type</string>
    <string name="collection_type">Collective Type</string>
    <string name="equipment_search_label">equipment_search_label</string>
    <string name="equipment_search_hint">equipment_search_hint</string>
    <string name="equipment_search_description">Equipment</string>
    <string name="users_search_description">Users</string>
    <string name="users_search_label">Users_search_label</string>
    <string name="users_search_hint">Users_search_hint</string>
    <string name="select_tracks_marker_color">Select Marker Color</string>
    <string name="icon">Icon</string>
    <string name="btn_tasks">Tasks</string>
    <string name="btn_priority_tasks">Priority Tasks</string>
    <string name="button_red">R</string>
    <string name="button_green">G</string>
    <string name="button_yellow">Y</string>
    <string name="button_black">Black</string>
    <string name="incident_password_prompt">Incident Password:</string>
    <string name="authorize">Authorize</string>
    <string name="cancel">Cancel</string>
    <string name="query_distinct_user_list">    	Asset INNER JOIN AssetAttribute ON (AssetAttribute.Asset=Asset.ID)
		INNER JOIN OperationalPeriod ON (OperationalPeriod.ID=AssetAttribute.OperationalPeriod) 
		INNER JOIN User ON (Asset.User=User.ID)
		INNER JOIN UserType ON (User.Type=UserType.ID)
		INNER JOIN Person ON (User.Person=Person.ID)
		LEFT OUTER JOIN Icon ON (UserType.Icon=Icon.ID)</string>
    <string name="title_activity_log_entry_images">LogEntryImages</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
